--- a/CSS/part-7/freelancer/package.json
+++ b/CSS/part-7/freelancer/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "lightbox2": "^2.11.4",
     "owl.carousel": "^2.3.4",
     "sass": "^1.54.4"
   }
