--- a/Asp.Net Core Mvc-Api/Udemy.ToDoAppNTier/Udemy.TodoAppNTier.Business/Udemy.TodoAppNTier.Business.csproj
+++ b/Asp.Net Core Mvc-Api/Udemy.ToDoAppNTier/Udemy.TodoAppNTier.Business/Udemy.TodoAppNTier.Business.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="FluentValidation" Version="11.9.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
   </ItemGroup>
 
   <ItemGroup>
